// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-premier",
    "sc-ultimate",
    "axis-atlas",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "indusind-eazydiner-platinum",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "sc-beyond",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "combo-dining-under-5000": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "sbi-card-prime",
    "axis-fibe",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "icici-adani-one-signature",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-airtel",
    "axis-horizon",
    "axis-ace",
    "axis-flipkart-super-elite",
    "axis-indigo-premium",
    "axis-flipkart",
    "axis-fibe",
    "axis-samsung-signature",
    "axis-rewards",
  ],
  "forex": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "au-ixigo",
    "hsbc-travelone",
  ],
  "forex-zero": [
    "au-ixigo",
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "kotak-solitaire",
    "yes-marquee",
    "sc-beyond",
    "kotak-white-reserve",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "au-ixigo",
    "axis-magnus",
    "kotak-solitaire",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-ace",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-privilege-easy",
    "axis-flipkart",
    "axis-fibe",
    "axis-cashback",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-shoppers-stop-black",
    "hdfc-shoppers-stop",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-hpcl-super-saver",
    "icici-amazon-pay",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "sbi-card-pulse",
    "krisflyer-sbi-apex",
    "reliance-sbi-prime",
    "sbi-cashback",
    "indigo-sbi-elite",
    "sbi-card-prime",
    "titan-sbi",
    "phonepe-sbi-purple",
    "sbi-card-miles-elite",
    "sbi-card-elite",
    "tata-neu-infinity-sbi",
  ],
  "lifetime-free": [
    "au-ixigo",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
    "axis-atlas",
    "au-ixigo",
  ],
  "lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
    "axis-atlas",
    "au-ixigo",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
    "axis-atlas",
    "au-ixigo",
    "phonepe-sbi-select-black",
    "amex-platinum-travel",
    "kotak-solitaire",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "au-ixigo",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "amex-smartearn",
    "cheq-au",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-samsung-signature",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "axis-airtel",
    "hsbc-live-plus",
    "hdfc-swiggy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hsbc-rupay-cashback",
    "axis-ace",
    "axis-fibe",
    "axis-rewards",
    "axis-select",
    "axis-my-zone",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "sbi-card-prime",
    "axis-airtel",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-orange",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "indusind-eazydiner",
    "bobcard-etihad-guest-premium",
  ],
  "segment-beginner": [
    "au-ixigo",
    "hsbc-live-plus",
    "yes-kiwi",
    "axis-airtel",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "amex-smartearn",
    "axis-ace",
    "hdfc-phonepe-ultimo",
    "yes-first-preferred",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-elite",
    "sbi-card-prime",
    "amex-gold",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "axis-airtel",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hsbc-premier",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-airtel",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-atlas",
  ],
  "usecase-cashback": [
    "axis-airtel",
    "phonepe-sbi-select-black",
    "yes-kiwi",
    "hsbc-live-plus",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "hsbc-rupay-cashback",
    "sc-beyond",
    "titan-sbi",
    "hdfc-phonepe-ultimo",
  ],
  "usecase-dining": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "sbi-card-prime",
    "axis-fibe",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
  ],
  "usecase-entertainment": [
    "hdfc-marriott-bonvoy",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "icici-coral",
    "landmark-rewards-sbi-prime",
    "bobcard-easy",
    "axis-my-zone",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "bpcl-sbi",
    "kotak-cashback-plus",
    "axis-indianoil",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "idfc-first-earn",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "kotak-cashback-plus",
    "rbl-shoprite",
    "bpcl-sbi-octane",
    "sbi-card-prime",
    "sbi-card-elite",
    "shaurya-select-sbi",
    "rbl-platinum-maxima-plus",
    "hdfc-moneyback-plus",
  ],
  "usecase-online": [
    "csb-jupiter-edge-plus",
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-airtel",
    "axis-fibe",
    "yes-pop-club",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-airtel",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-indianoil",
    "hdfc-infinia-metal",
    "axis-ace",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "amex-gold",
    "axis-atlas",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "hdfc-millennia",
    "amex-smartearn",
  ],
  "category-rent": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "hsbc-travelone",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "amex-smartearn",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "axis-ace",
    "sbi-card-prime",
    "indusind-eazydiner",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
  ],
  "category-utility-bills": [
    "axis-ace",
    "icici-emeralde-private-metal",
    "sbi-card-prime",
    "cheq-au",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "icici-hpcl-super-saver",
    "amex-gold",
    "bobcard-hpcl-energie",
    "idfc-first-power",
    "bobcard-select",
  ],
  "combo-dining-under-5000": [
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "yes-paisabazaar-paisasave",
    "hdfc-swiggy-orange",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "bpcl-sbi-octane",
    "hdfc-marriott-bonvoy",
    "shaurya-select-sbi",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "sc-ultimate",
    "icici-adani-one-signature",
    "amex-platinum-travel",
    "equitas-powermiles",
    "idfc-mayura",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-airtel",
    "axis-horizon",
    "axis-ace",
    "axis-flipkart-super-elite",
    "axis-indigo-premium",
    "axis-flipkart",
    "axis-fibe",
    "axis-samsung-signature",
    "axis-rewards",
  ],
  "forex": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "equitas-powermiles",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "bobcard-etihad-guest-premium",
    "axis-magnus",
    "icici-times-black",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "kotak-solitaire",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
    "axis-atlas",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-flipkart",
    "axis-ace",
    "axis-indigo-premium",
    "axis-samsung-signature",
    "axis-cashback",
    "axis-fibe",
    "axis-airtel",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-pixel-play",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-emeralde",
    "icici-sapphiro",
    "icici-coral-rupay",
    "icici-coral",
    "icici-sapphiro-rupay",
    "icici-hpcl-coral",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "tata-neu-infinity-sbi",
    "titan-sbi",
    "indigo-sbi-elite",
    "sbi-card-miles-elite",
    "sbi-card-prime",
    "sbi-card-elite",
    "flipkart-sbi",
    "sbi-cashback",
    "phonepe-sbi-purple",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "indusind-tiger",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-imperio",
    "idfc-first-wealth",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "sc-beyond",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "equitas-selfe",
    "phonepe-sbi-select-black",
    "equitas-powermiles",
    "amex-platinum-travel",
    "hdfc-marriott-bonvoy",
    "hdfc-diners-club-privilege",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "au-ixigo",
    "icici-amazon-pay",
    "indusind-tiger",
    "sc-priority-visa-infinite",
    "csb-jupiter-edge-plus",
    "kotak-infinite",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-flipkart",
    "flipkart-sbi",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "axis-ace",
    "axis-fibe",
    "axis-airtel",
    "hsbc-rupay-cashback",
    "axis-rewards",
    "axis-my-zone",
    "axis-select",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "sbi-card-elite",
    "sbi-card-prime",
    "axis-airtel",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-orange",
  ],
  "network-rupay": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
  "network-visa": [
    "sc-priority-visa-infinite",
    "hsbc-visa-platinum",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "axis-magnus-burgundy",
    "indusind-eazydiner",
    "bobcard-etihad-guest-premium",
  ],
  "segment-beginner": [
    "au-ixigo",
    "hsbc-live-plus",
    "yes-kiwi",
    "axis-airtel",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "amex-smartearn",
    "axis-ace",
    "hdfc-phonepe-ultimo",
    "yes-first-preferred",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "hdfc-shoppers-stop-black",
    "yes-marquee",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "indusind-eazydiner",
    "bobcard-eterna",
    "sbi-card-elite",
    "sbi-card-prime",
    "amex-gold",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "axis-atlas",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "kotak-white-reserve",
    "amex-platinum-reserve",
    "axis-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-atlas",
    "kotak-solitaire",
    "amex-platinum-travel",
    "axis-magnus-burgundy",
    "hdfc-marriott-bonvoy",
    "sc-ultimate",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-atlas",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "indusind-tiger",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "equitas-powermiles",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
    "kotak-solitaire",
    "au-ixigo",
    "hdfc-regalia-gold",
    "idfc-mayura",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "axis-flipkart-super-elite",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "axis-atlas",
    "kotak-solitaire",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "axis-atlas",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "hsbc-visa-platinum",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "axis-airtel",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "axis-ace",
    "hdfc-millennia",
    "hdfc-phonepe-ultimo",
    "titan-sbi",
    "csb-jupiter-edge-plus",
  ],
  "usecase-dining": [
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hsbc-rupay-cashback",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "indusind-eazydiner",
    "yes-first-preferred",
    "axis-fibe",
    "bpcl-sbi-octane",
  ],
  "usecase-entertainment": [
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "hsbc-live-plus",
    "sbi-card-elite",
    "bpcl-sbi-octane",
    "landmark-rewards-sbi-prime",
    "hsbc-rupay-cashback",
    "icici-coral",
    "axis-my-zone",
    "bobcard-easy",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "sc-platinum-rewards",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "bpcl-sbi-octane",
    "kotak-cashback-plus",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "hdfc-moneyback-plus",
    "shaurya-select-sbi",
    "rbl-shoprite",
    "rbl-platinum-maxima-plus",
    "axis-indigo-premium",
  ],
  "usecase-online": [
    "sbi-cashback",
    "phonepe-sbi-select-black",
    "csb-jupiter-edge-plus",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-cashback",
    "indusind-eazydiner",
    "kotak-cashback-plus",
    "phonepe-sbi-purple",
    "simplyclick-sbi",
    "yes-pop-club",
    "icici-amazon-pay",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-atlas",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "krisflyer-sbi-apex",
  ],
  "usecase-upi": [
    "yes-kiwi",
    "au-ixigo",
    "indigo-sbi-elite",
    "kotak-white-reserve",
    "yes-pop-club",
    "yes-reserv",
    "reliance-sbi-prime",
    "phonepe-sbi-select-black",
    "hdfc-tata-neu-infinity",
    "hsbc-rupay-platinum",
    "tata-neu-infinity-sbi",
    "hsbc-rupay-cashback",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "axis-airtel",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "axis-ace",
      "phonepe-sbi-purple",
      "cheq-au",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "sc-ultimate",
      "amex-gold",
      "hdfc-indianoil",
      "hdfc-infinia-metal",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hsbc-premier",
      "amex-membership-rewards",
      "hdfc-infinia-metal",
      "amex-gold",
    ],
  },
  "category-rent": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "axis-ace",
      "phonepe-sbi-purple",
      "cheq-au",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "sc-ultimate",
      "amex-gold",
      "hdfc-infinia-metal",
      "sbi-card-prime",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "axis-ace",
      "phonepe-sbi-purple",
      "cheq-au",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "sbi-card-prime",
      "sc-ultimate",
      "amex-gold",
      "bobcard-hpcl-energie",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "yes-paisabazaar-paisasave",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "sbi-card-prime",
      "indusind-eazydiner",
      "yes-first-preferred",
      "hdfc-marriott-bonvoy",
    ],
  },
  "combo-premium-travel": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-flipkart",
      "axis-fibe",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-flipkart-super-elite",
      "axis-indigo-premium",
      "axis-horizon",
      "axis-magnus",
    ],
  },
  "forex": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "equitas-powermiles",
      "hdfc-infinia-metal",
    ],
  },
  "forex-zero": {
    "": [
      "bobcard-etihad-guest-premium",
      "kotak-solitaire",
      "idfc-mayura",
      "au-ixigo",
      "rbl-world-safari",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "yes-marquee",
      "kotak-solitaire",
    ],
  },
  "issuer-amex": {
    "": [
      "amex-platinum-travel",
      "amex-gold",
      "amex-membership-rewards",
      "amex-platinum-reserve",
      "amex-smartearn",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-flipkart",
      "axis-fibe",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-marriott-bonvoy",
      "hdfc-diners-club-privilege",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "titan-sbi",
      "bpcl-sbi-octane",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "aurum-sbi",
      "tata-neu-infinity-sbi",
      "indigo-sbi-elite",
      "sbi-card-miles-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
      "axis-kwik",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "sc-beyond",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "axis-airtel",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-atlas",
      "cheq-au",
      "kotak-solitaire",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "sc-priority-visa-infinite",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "axis-flipkart",
      "flipkart-sbi",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hsbc-live-plus",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-swiggy-black",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "sbi-card-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "axis-atlas",
      "indusind-eazydiner",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "axis-airtel",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "yes-kiwi",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "au-ixigo",
      "hdfc-diners-club-privilege",
      "amex-smartearn",
      "hdfc-shoppers-stop",
      "hsbc-visa-platinum",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "bpcl-sbi-octane",
      "apollo-sbi-select",
      "rbl-patanjali-swarn",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "amex-membership-rewards",
      "indusind-eazydiner",
      "hdfc-shoppers-stop-black",
    ],
  },
  "segment-premium": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [
      "sc-beyond",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "yes-kiwi",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "titan-sbi",
      "sc-beyond",
      "hsbc-live-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
      "au-ixigo",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hsbc-live-plus",
      "phonepe-sbi-select-black",
      "hdfc-swiggy-black",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "cheq-au",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "yes-kiwi",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "yes-paisabazaar-paisasave",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
    ],
  },
  "usecase-cashback": {
    "": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "yes-paisabazaar-paisasave",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "hdfc-marriott-bonvoy",
      "sbi-card-prime",
      "indusind-eazydiner",
      "yes-first-preferred",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "sbi-card-prime",
      "sbi-card-elite",
      "landmark-rewards-sbi-prime",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "idfc-first-earn",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "axis-indianoil",
      "axis-indianoil-easy",
      "hdfc-indianoil",
      "idfc-first-power",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
    ],
    "Rewards cards": [
      "sbi-card-prime",
      "hdfc-moneyback-plus",
      "shaurya-select-sbi",
      "rbl-shoprite",
      "rbl-platinum-maxima-plus",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "axis-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "indusind-eazydiner",
      "simplyclick-sbi",
      "yes-pop-club",
      "au-ixigo",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "sc-beyond",
      "axis-ace",
      "axis-fibe",
      "csb-jupiter-edge-plus",
      "apollo-sbi-select",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "axis-airtel",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "axis-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "bobcard-eterna",
      "indusind-eazydiner",
      "simplyclick-sbi",
      "yes-pop-club",
      "au-ixigo",
    ],
  },
  "premium-degrade-single": {
    "": [
      "axis-atlas",
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "axis-airtel",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
    ],
  },
}
`;
